# skywalking-copilot

./: .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  devbox.json  docker-compose.yml  pyproject.toml  sample.env  showcase.patch
alembic/: env.py
alembic/versions/: 99989526150b_initial_db.py  d592dc85b1ae_initial_db.py
docker/: entrypoint.sh
skywalking_copilot/: __main__.py  agent.py  agent_tools.py  alarms.py  api.py  database.py  skywalking.py  templates.py
skywalking_copilot/assets/: alarms-query-template.gql  echarts-options-template.json  list-services-query-template.gql  manifest.json  service-metric-chart-template.md  service-metric-query-template.gql  services-metrics-template.md  services-topology-query-template.gql  services-topology-template.md  system-prompt.md  topology-diagram-template.puml
skywalking_copilot/assets/graphql/: list-services.gql  service-by-name.gql  service-metric.gql  services-topology.gql  trace.gql
skywalking_copilot/assets/responses/: alarms.md  echarts-options.json  service-metric-chart.md  services-metrics.md  services-topology.md  topology.puml  traces.md
