[tool.poetry]
name = "skywalking_copilot"
version = "0.1"
description = "A browser copilot that empowers the usage of applications that use Apache Skywalking as observability platform"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
openai = "^1.42.0"
python-dotenv = "^1.0.1"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
sse-starlette = "^2.1.3"
jinja2 = "^3.1.4"
gql = "^3.5.0"
pydantic = "^2.8.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}
sqlalchemy = "^2.0.32"
langchain-postgres = "^0.0.9"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
